deploy/gatus/gatus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatus
  namespace: default
  labels:
    app: gatus
spec:
  selector:
    app: gatus
  ports:
  - name: http
    port: 8080
    targetPort: 8080
