deploy/gatus/gatus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatus-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: status.transparentlyrotatableproxy.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gatus
            port:
              number: 8080
  tls:
  - hosts:
    - status.transparentlyrotatableproxy.me
    secretName: status-transparentlyrotatableproxy-me-tls
